Solved issue with body horizontal scroll

--- a/DurandalAuth.Web/Content/app.css
+++ b/DurandalAuth.Web/Content/app.css
@@ -46,6 +46,10 @@
 
 /* General CSS */
 
+body {
+    overflow-x : hidden;
+}
+
 .padt15px {
 	padding-top : 15px;
 }
